--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>STT 員工端操作演示</title>
-    <!-- Vue 3 -->
-    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <!-- Vue 3 (改用 cdnjs Production 版本，更穩定) -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/3.3.4/vue.global.prod.min.js"></script>
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- FontAwesome -->
@@ -17,13 +17,16 @@
         body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; }
         .slide-enter-active, .slide-leave-active { transition: all 0.3s ease; }
         .slide-enter-from, .slide-leave-to { opacity: 0; transform: translateX(20px); }
-        /* 簽名板樣式 */
+        /* 簽名板樣式 - 防止觸控時捲動頁面 */
         canvas { touch-action: none; }
+        /* 防止 Vue 尚未載入時顯示亂碼 */
+        [v-cloak] { display: none; }
     </style>
 </head>
 <body class="bg-gray-100 h-screen overflow-hidden">
 
-<div id="app" class="h-full flex flex-col max-w-md mx-auto bg-white shadow-2xl relative">
+<!-- 加入 v-cloak 屬性 -->
+<div id="app" v-cloak class="h-full flex flex-col max-w-md mx-auto bg-white shadow-2xl relative">
 
     <!-- 頂部導航欄 -->
     <header class="bg-slate-800 text-white p-4 flex justify-between items-center shadow-md z-10">
